; ModuleID = '/home/carl/AnghaBench/tig/src/extr_apps.c_app_oneline_buf.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_apps.c_app_oneline_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.app_external = type { i32, i32 }
%struct.io = type { i32 }

@IO_RD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64, %struct.app_external*, i8*)* @app_oneline_buf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @app_oneline_buf(i8* %0, i64 %1, %struct.app_external* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.app_external*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.io, align 4
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store %struct.app_external* %2, %struct.app_external** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load i32, i32* @IO_RD, align 4
  %11 = load i8*, i8** %8, align 8
  %12 = load %struct.app_external*, %struct.app_external** %7, align 8
  %13 = getelementptr inbounds %struct.app_external, %struct.app_external* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.app_external*, %struct.app_external** %7, align 8
  %16 = getelementptr inbounds %struct.app_external, %struct.app_external* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i64 @io_run(%struct.io* %9, i32 %10, i8* %11, i32 %14, i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %25

20:                                               ; preds = %4
  %21 = load i8*, i8** %5, align 8
  %22 = load i64, i64* %6, align 8
  %23 = call i64 @io_read_buf(%struct.io* %9, i8* %21, i64 %22, i32 0)
  %24 = icmp ne i64 %23, 0
  br label %25

25:                                               ; preds = %20, %4
  %26 = phi i1 [ false, %4 ], [ %24, %20 ]
  %27 = zext i1 %26 to i32
  ret i32 %27
}

declare dso_local i64 @io_run(%struct.io*, i32, i8*, i32, i32) #1

declare dso_local i64 @io_read_buf(%struct.io*, i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
